holos/deploy/clusters/k3d-holos/components/nats/authorizationpolicy-nats.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  labels:
    app.kubernetes.io/name: nats
  name: nats
  namespace: nats
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces:
        - nats
  - from:
    - source:
        namespaces:
        - webhook-receiver
    to:
    - operation:
        ports:
        - "4222"
  selector:
    matchLabels:
      app.kubernetes.io/component: nats
      app.kubernetes.io/instance: nats
      app.kubernetes.io/name: nats
